tests/baselines/reference/restElementWithAssignmentPattern2.errors.txt
restElementWithAssignmentPattern2.ts(2,10): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
restElementWithAssignmentPattern2.ts(2,18): error TS2339: Property 'b' does not exist on type '(string | number)[]'.


==== restElementWithAssignmentPattern2.ts (2 errors) ====
    var a: string, b: number;
    [...{ 0: a = "", b }] = ["", 1];
             ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
                     ~
!!! error TS2339: Property 'b' does not exist on type '(string | number)[]'.